--- a/stellar-evolution.html
+++ b/stellar-evolution.html
@@ -1,187 +1,278 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Stellar Evolution | Everything Astronomy</title>
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
-    body {
-      margin: 0;
-      font-family: 'Orbitron', sans-serif;
-      color: white;
-      overflow-x: hidden;
-      background: radial-gradient(ellipse at center, #050505 0%, #000010 100%);
-      height: 100vh;
+    :root{
+      --bg1: #02020a;
+      --bg2: #000018;
+      --accent: #00fff2;
+      --muted: #bfc7d1;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%;margin:0;font-family:'Orbitron',sans-serif;background:linear-gradient(180deg,var(--bg1) 0%, var(--bg2) 100%);color:#fff;scroll-behavior:smooth}
+    /* fixed top indicator */
+    .topbar{
+      position:fixed;top:12px;left:50%;transform:translateX(-50%);
+      z-index:40;
+      display:flex;align-items:center;gap:14px;
+      background:linear-gradient(90deg, rgba(255,255,255,0.03), rgba(255,255,255,0.01));
+      padding:8px 16px;border-radius:28px;border:1px solid rgba(0,255,242,0.12);
+      backdrop-filter: blur(6px);box-shadow:0 6px 30px rgba(0,0,0,0.6)
+    }
+    .topbar .stage-name{font-weight:700;color:var(--accent);letter-spacing:0.6px}
+    .topbar .stage-index{font-size:0.9rem;color:var(--muted);opacity:0.9}
+
+    /* container of panels */
+    main{width:100%;height:100%;}
+    .panel{
+      min-height:100vh;display:flex;align-items:center;justify-content:center;padding:60px 22px;
+      position:relative;overflow:hidden;
+      transition:background 0.6s ease;
     }
 
-    /* floating particle effect */
-    .stars {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-      overflow: hidden;
+    /* visuals inside each panel */
+    .panel-inner{max-width:1200px;width:100%;display:grid;grid-template-columns: 1fr 1fr;gap:40px;align-items:center}
+    /* responsive stack */
+    @media (max-width:840px){ .panel-inner{grid-template-columns:1fr; text-align:center} }
+
+    .visual{
+      display:flex;align-items:center;justify-content:center;
     }
-    .star {
-      position: absolute;
-      width: 2px;
-      height: 2px;
-      background: white;
-      border-radius: 50%;
-      animation: drift 20s linear infinite;
-      opacity: 0.8;
+    .visual img{
+      width:360px;height:360px;border-radius:50%;
+      object-fit:cover;box-shadow:0 0 80px rgba(0,255,242,0.08);transition:transform 800ms cubic-bezier(.22,.9,.2,1), filter 700ms;
+      transform: scale(.94);
+      border: 6px solid rgba(0,255,242,0.06);
+      background: radial-gradient(circle at 30% 30%, rgba(255,255,255,0.02), transparent);
     }
-    @keyframes drift {
-      0% { transform: translateY(0px) translateX(0px); }
-      100% { transform: translateY(-1000px) translateX(500px); }
+    .content{
+      padding:12px 6px;
+    }
+    .content h2{font-size:2.2rem;color:var(--accent);margin:0 0 12px}
+    .content p{color:var(--muted);line-height:1.6;font-size:1.05rem;margin:0 0 16px}
+    .meta{font-size:0.92rem;color:#9fbac3}
+
+    /* inactive -> active animation classes */
+    .panel .panel-inner{transform:translateY(30px);opacity:0;transition:transform 700ms ease, opacity 700ms ease}
+    .panel.in-view .panel-inner{transform:none;opacity:1}
+
+    .panel .visual img{filter:grayscale(.6) blur(0.6px) opacity(.85)}
+    .panel.in-view .visual img{filter:none;opacity:1;transform:scale(1)}
+
+    /* subtle stage background tints for variety */
+    .panel.stage-0{background: radial-gradient(1200px 600px at 20% 20%, rgba(0,255,242,0.03), transparent), linear-gradient(180deg,#010014 0%, #000010 100%)}
+    .panel.stage-1{background: radial-gradient(900px 500px at 80% 10%, rgba(255,120,100,0.03), transparent), linear-gradient(180deg,#050012 0%, #000011 100%)}
+    .panel.stage-2{background: radial-gradient(1000px 500px at 40% 70%, rgba(255,220,120,0.02), transparent), linear-gradient(180deg,#050011 0%, #000010 100%)}
+    .panel.stage-3{background: radial-gradient(1000px 500px at 60% 40%, rgba(255,80,120,0.02), transparent), linear-gradient(180deg,#080006 0%, #000009 100%)}
+    .panel.stage-4{background: radial-gradient(900px 500px at 30% 30%, rgba(255,200,60,0.03), transparent), linear-gradient(180deg,#050010 0%, #000013 100%)}
+    .panel.stage-5{background: radial-gradient(1000px 500px at 50% 60%, rgba(140,120,255,0.03), transparent), linear-gradient(180deg,#030016 0%, #000015 100%)}
+
+    /* small caption bar at bottom of each panel */
+    .caption{
+      position:absolute;left:50%;transform:translateX(-50%);bottom:26px;padding:8px 14px;border-radius:20px;
+      background:rgba(0,0,0,0.35);border:1px solid rgba(255,255,255,0.04);color:var(--muted);font-size:0.95rem
     }
 
-    header {
-      text-align: center;
-      margin-top: 50px;
-    }
-    header h1 {
-      font-size: 3rem;
-      color: #fff;
-      text-shadow: 0 0 20px #00ffff, 0 0 40px #00ffff;
-    }
-    header p {
-      font-size: 1rem;
-      color: #aaa;
-      margin-top: 5px;
-    }
-
-    /* central image + info box */
-    .content {
-      text-align: center;
-      margin-top: 60px;
-    }
-
-    .star-image {
-      width: 220px;
-      height: 220px;
-      border-radius: 50%;
-      margin: 0 auto;
-      box-shadow: 0 0 40px #00ffff;
-      transition: all 1s ease;
-    }
-
-    .info {
-      margin-top: 20px;
-      font-size: 1.1rem;
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
-      line-height: 1.6;
-      color: #d0d0d0;
-    }
-
-    /* timeline */
-    .timeline {
-      display: flex;
-      justify-content: center;
-      gap: 25px;
-      margin-top: 50px;
-      flex-wrap: wrap;
-    }
-    .stage {
-      cursor: pointer;
-      padding: 12px 20px;
-      border: 1px solid #00ffff;
-      border-radius: 25px;
-      transition: all 0.3s ease;
-    }
-    .stage:hover, .stage.active {
-      background-color: #00ffff;
-      color: #000;
-      transform: scale(1.05);
-      text-shadow: 0 0 8px #000;
-    }
-
-    /* back button */
+    /* nav back button fixed bottom center */
     .back-home {
       position: fixed;
-      bottom: 20px;
+      bottom: 18px;
       left: 50%;
       transform: translateX(-50%);
-      background-color: rgba(255, 255, 255, 0.1);
-      border: 1px solid rgba(255, 255, 255, 0.4);
+      background-color: rgba(255, 255, 255, 0.06);
+      border: 1px solid rgba(255, 255, 255, 0.12);
       color: white;
       padding: 10px 20px;
       border-radius: 20px;
-      font-family: 'Orbitron', sans-serif;
       text-decoration: none;
-      backdrop-filter: blur(10px);
-      transition: all 0.3s ease;
+      backdrop-filter: blur(6px);
+      transition: transform .25s ease, background .25s ease;
+      z-index:45;
     }
+    .back-home:hover{transform:translateX(-50%) scale(1.05);background-color: rgba(255,255,255,0.14)}
 
-    .back-home:hover {
-      background-color: rgba(255, 255, 255, 0.3);
-      transform: translateX(-50%) scale(1.05);
+    /* small progress indicator at right */
+    .progress{
+      position:fixed;right:18px;top:50%;transform:translateY(-50%);display:flex;flex-direction:column;gap:10px;
+      z-index:40;
     }
+    .dot{width:10px;height:10px;border-radius:50%;background:rgba(255,255,255,0.08);border:1px solid rgba(255,255,255,0.03)}
+    .dot.active{background:var(--accent);box-shadow:0 0 12px rgba(0,255,242,0.14);border-color:rgba(0,255,242,0.2)}
   </style>
 </head>
-
 <body>
-  <div class="stars" id="stars"></div>
 
-  <header>
-    <h1>Stellar Evolution</h1>
-    <p>from cosmic dust to cosmic destiny</p>
-  </header>
-
-  <div class="content">
-    <img id="starImage" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Orion_Nebula_-_Hubble_2006_mosaic_18000.jpg/800px-Orion_Nebula_-_Hubble_2006_mosaic_18000.jpg" class="star-image" />
-    <div id="infoBox" class="info">
-      A star begins its life within a vast nebula — a cloud of gas and dust drawn together by gravity.
-    </div>
+  <div class="topbar">
+    <div class="stage-index" id="stageIndex">1 / 6</div>
+    <div class="stage-name" id="stageName">Nebula</div>
   </div>
 
-  <div class="timeline">
-    <div class="stage active" data-image="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Orion_Nebula_-_Hubble_2006_mosaic_18000.jpg/800px-Orion_Nebula_-_Hubble_2006_mosaic_18000.jpg" data-info="A star begins its life within a vast nebula — a cloud of gas and dust drawn together by gravity.">Nebula</div>
+  <main id="story">
+    <!-- Panel: Nebula -->
+    <section class="panel stage-0" data-title="Nebula">
+      <div class="panel-inner">
+        <div class="visual">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Orion_Nebula_-_Hubble_2006_mosaic_18000.jpg/800px-Orion_Nebula_-_Hubble_2006_mosaic_18000.jpg" alt="Nebula - Orion">
+        </div>
+        <div class="content">
+          <h2>Nebula</h2>
+          <p>Vast clouds of gas and dust — the stellar nurseries. Disturbances cause clumps of gas to collapse under gravity and begin a long process of condensation.</p>
+          <div class="meta">Energy Source: gravitational collapse · Timescale: thousands to millions of years</div>
+        </div>
+      </div>
+      <div class="caption">Stage 1 — Birthplace of stars</div>
+    </section>
 
-    <div class="stage" data-image="https://upload.wikimedia.org/wikipedia/commons/4/47/Protostar_in_Carina_Nebula.jpg" data-info="As the gas collapses, pressure and heat rise, forming a protostar — the stellar embryo.">Protostar</div>
+    <!-- Panel: Protostar -->
+    <section class="panel stage-1" data-title="Protostar">
+      <div class="panel-inner">
+        <div class="visual">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/4/47/Protostar_in_Carina_Nebula.jpg" alt="Protostar">
+        </div>
+        <div class="content">
+          <h2>Protostar</h2>
+          <p>The collapsing core heats up. Pressure climbs and an opaque, glowing protostar forms — nuclear fusion has not yet started at the core.</p>
+          <div class="meta">Energy Source: gravitational contraction · Timescale: ~10^5–10^6 years</div>
+        </div>
+      </div>
+      <div class="caption">Stage 2 — Stellar embryo</div>
+    </section>
 
-    <div class="stage" data-image="https://upload.wikimedia.org/wikipedia/commons/2/20/Sun_in_February_2001_-_ULYSSES_and_SOHO.jpg" data-info="The main sequence: hydrogen fusion begins, and the star shines steadily for billions of years.">Main Sequence</div>
+    <!-- Panel: Main Sequence -->
+    <section class="panel stage-2" data-title="Main Sequence">
+      <div class="panel-inner">
+        <div class="visual">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Sun_in_February_2001_-_ULYSSES_and_SOHO.jpg" alt="Main Sequence - Star">
+        </div>
+        <div class="content">
+          <h2>Main Sequence</h2>
+          <p>Hydrogen fusion ignites in the core and the star shines steadily. Main sequence lifetime depends strongly on mass — low mass lives long, massive ones short.</p>
+          <div class="meta">Energy Source: hydrogen fusion (pp chain / CNO cycle) · Timescale: millions to billions of years</div>
+        </div>
+      </div>
+      <div class="caption">Stage 3 — Stable fuel burning</div>
+    </section>
 
-    <div class="stage" data-image="https://upload.wikimedia.org/wikipedia/commons/3/3f/Red_Giant_star.jpg" data-info="As hydrogen runs low, the core contracts and outer layers expand — the star becomes a red giant.">Red Giant</div>
+    <!-- Panel: Red Giant -->
+    <section class="panel stage-3" data-title="Red Giant">
+      <div class="panel-inner">
+        <div class="visual">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Red_Giant_star.jpg" alt="Red Giant">
+        </div>
+        <div class="content">
+          <h2>Red Giant</h2>
+          <p>After hydrogen is exhausted in the core, fusion shifts outward. The envelope expands vastly and the surface cools—appearance becomes red and luminous.</p>
+          <div class="meta">Energy Source: shell fusion · Timescale: 10^6–10^8 years</div>
+        </div>
+      </div>
+      <div class="caption">Stage 4 — Expansion and cooling</div>
+    </section>
 
-    <div class="stage" data-image="https://upload.wikimedia.org/wikipedia/commons/0/07/SN1994D.jpg" data-info="In massive stars, collapse triggers a supernova — a brilliant explosion dispersing heavy elements.">Supernova</div>
+    <!-- Panel: Supernova -->
+    <section class="panel stage-4" data-title="Supernova">
+      <div class="panel-inner">
+        <div class="visual">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/0/07/SN1994D.jpg" alt="Supernova">
+        </div>
+        <div class="content">
+          <h2>Supernova</h2>
+          <p>For massive stars, core collapse can cause an enormous explosion — producing heavy elements and briefly outshining entire galaxies.</p>
+          <div class="meta">Energy Source: core collapse / explosive nucleosynthesis · Timescale: seconds to months (visible)</div>
+        </div>
+      </div>
+      <div class="caption">Stage 5 — Cataclysmic end</div>
+    </section>
 
-    <div class="stage" data-image="https://upload.wikimedia.org/wikipedia/commons/d/d2/Crab_Nebula.jpg" data-info="Depending on its mass, the remnant becomes a neutron star or collapses into a black hole.">Remnant</div>
+    <!-- Panel: Remnant -->
+    <section class="panel stage-5" data-title="Remnant">
+      <div class="panel-inner">
+        <div class="visual">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/d/d2/Crab_Nebula.jpg" alt="Remnant - Crab Nebula">
+        </div>
+        <div class="content">
+          <h2>Remnant</h2>
+          <p>Leftovers of the explosion become a neutron star or black hole, while the expelled material seeds future generations of stars and planets.</p>
+          <div class="meta">Outcome: neutron star / black hole · Legacy: heavy elements seeded into space</div>
+        </div>
+      </div>
+      <div class="caption">Stage 6 — Aftermath & recycling</div>
+    </section>
+  </main>
+
+  <div class="progress" id="progress">
+    <div class="dot"></div>
+    <div class="dot"></div>
+    <div class="dot"></div>
+    <div class="dot"></div>
+    <div class="dot"></div>
+    <div class="dot"></div>
   </div>
 
   <a href="index.html" class="back-home">← Back to Home</a>
 
   <script>
-    // particle generation
-    const starsContainer = document.getElementById("stars");
-    for (let i = 0; i < 150; i++) {
-      const star = document.createElement("div");
-      star.classList.add("star");
-      star.style.top = Math.random() * 100 + "%";
-      star.style.left = Math.random() * 100 + "%";
-      star.style.animationDuration = 10 + Math.random() * 20 + "s";
-      star.style.opacity = Math.random();
-      starsContainer.appendChild(star);
+
+    const panels = document.querySelectorAll('.panel');
+    const dots = document.querySelectorAll('.dot');
+    const stageIndex = document.getElementById('stageIndex');
+    const stageName = document.getElementById('stageName');
+
+    const options = {
+      root: null,
+      rootMargin: '0px',
+      threshold: 0.55 
+    };
+
+    const obs = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if(entry.isIntersecting){
+          entry.target.classList.add('in-view');
+          // update top bar and progress
+          const idx = Array.from(panels).indexOf(entry.target);
+          stageIndex.textContent = (idx + 1) + ' / ' + panels.length;
+          stageName.textContent = entry.target.dataset.title || '';
+          dots.forEach((d,i)=> d.classList.toggle('active', i===idx));
+        } else {
+          entry.target.classList.remove('in-view');
+        }
+      });
+    }, options);
+
+    panels.forEach(p => obs.observe(p));
+
+    window.addEventListener('keydown', (e) => {
+      if(e.key === 'ArrowDown' || e.key === 'PageDown'){
+        scrollToPanel(1);
+      } else if(e.key === 'ArrowUp' || e.key === 'PageUp'){
+        scrollToPanel(-1);
+      }
+    });
+
+    function scrollToPanel(direction){
+      const visible = Array.from(panels).findIndex(p => p.classList.contains('in-view'));
+      let target = visible + direction;
+      target = Math.max(0, Math.min(panels.length - 1, target));
+      panels[target].scrollIntoView({behavior:'smooth'});
     }
 
-    // interactive timeline logic
-    const stages = document.querySelectorAll(".stage");
-    const starImage = document.getElementById("starImage");
-    const infoBox = document.getElementById("infoBox");
-
-    stages.forEach(stage => {
-      stage.addEventListener("click", () => {
-        stages.forEach(s => s.classList.remove("active"));
-        stage.classList.add("active");
-        starImage.src = stage.dataset.image;
-        infoBox.textContent = stage.dataset.info;
+    dots.forEach((dot, i) => {
+      dot.addEventListener('click', () => {
+        panels[i].scrollIntoView({behavior:'smooth'});
       });
+    });
+
+    window.addEventListener('load', () => {
+      panels[0].classList.add('in-view');
+      dots[0].classList.add('active');
+      stageName.textContent = panels[0].dataset.title;
+      stageIndex.textContent = '1 / ' + panels.length;
     });
   </script>
 </body>
