Add header with title and subtitle to HTML

--- a/stellar-evolution.html
+++ b/stellar-evolution.html
@@ -15,6 +15,22 @@
       --accent: #00fff2;
       --muted: #bfc7d1;
     }
+
+ header {
+      text-align: center;
+      margin-top: 50px;
+    }
+    header h1 {
+      font-size: 3rem;
+      color: #fff;
+      text-shadow: 0 0 20px #00ffff, 0 0 40px #00ffff;
+    }
+    header p {
+      font-size: 1rem;
+      color: #aaa;
+      margin-top: 5px;
+    }
+    
     *{box-sizing:border-box}
     html,body{height:100%;margin:0;font-family:'Orbitron',sans-serif;background:linear-gradient(180deg,var(--bg1) 0%, var(--bg2) 100%);color:#fff;scroll-behavior:smooth}
     /* fixed top indicator */
@@ -113,6 +129,11 @@
     <div class="stage-index" id="stageIndex">1 / 6</div>
     <div class="stage-name" id="stageName">Nebula</div>
   </div>
+
+    <header>
+    <h1>Stellar Evolution</h1>
+    <p>from cosmic dust to cosmic destiny</p>
+  </header>
 
   <main id="story">
     <!-- Panel: Nebula -->
