--- a/stellar-evolution.html
+++ b/stellar-evolution.html
@@ -140,7 +140,7 @@
     <section class="panel stage-0" data-title="Nebula">
       <div class="panel-inner">
         <div class="visual">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Orion_Nebula_-_Hubble_2006_mosaic_18000.jpg/800px-Orion_Nebula_-_Hubble_2006_mosaic_18000.jpg" alt="Nebula - Orion">
+          <img src="Trifid_Nebula_by_Deddy_Dayag.jpg" alt="Nebula - Orion">
         </div>
         <div class="content">
           <h2>Nebula</h2>
@@ -155,7 +155,7 @@
     <section class="panel stage-1" data-title="Protostar">
       <div class="panel-inner">
         <div class="visual">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/4/47/Protostar_in_Carina_Nebula.jpg" alt="Protostar">
+          <img src="Protostar-Illustration.jpg" alt="Protostar">
         </div>
         <div class="content">
           <h2>Protostar</h2>
@@ -170,7 +170,7 @@
     <section class="panel stage-2" data-title="Main Sequence">
       <div class="panel-inner">
         <div class="visual">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Sun_in_February_2001_-_ULYSSES_and_SOHO.jpg" alt="Main Sequence - Star">
+          <img src="matteo-barbaro-1.jpg" alt="Main Sequence - Star">
         </div>
         <div class="content">
           <h2>Main Sequence</h2>
@@ -185,7 +185,7 @@
     <section class="panel stage-3" data-title="Red Giant">
       <div class="panel-inner">
         <div class="visual">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Red_Giant_star.jpg" alt="Red Giant">
+          <img src="fec251967d48b9f2eb78bea4de166409.jpg" alt="Red Giant">
         </div>
         <div class="content">
           <h2>Red Giant</h2>
@@ -200,7 +200,7 @@
     <section class="panel stage-4" data-title="Supernova">
       <div class="panel-inner">
         <div class="visual">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/0/07/SN1994D.jpg" alt="Supernova">
+          <img src="/4364907875_b18f941350_b.jpg" alt="Supernova">
         </div>
         <div class="content">
           <h2>Supernova</h2>
@@ -215,7 +215,7 @@
     <section class="panel stage-5" data-title="Remnant">
       <div class="panel-inner">
         <div class="visual">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/d/d2/Crab_Nebula.jpg" alt="Remnant - Crab Nebula">
+          <img src="cas_a_2004_12-hst-10252x7379_print.jpg" alt="Remnant - Crab Nebula">
         </div>
         <div class="content">
           <h2>Remnant</h2>
