remove extra slash from link

--- a/stellar-evolution.html
+++ b/stellar-evolution.html
@@ -200,7 +200,7 @@
     <section class="panel stage-4" data-title="Supernova">
       <div class="panel-inner">
         <div class="visual">
-          <img src="/4364907875_b18f941350_b.jpg" alt="Supernova">
+          <img src="4364907875_b18f941350_b.jpg" alt="Supernova">
         </div>
         <div class="content">
           <h2>Supernova</h2>
