--- a/universe.html
+++ b/universe.html
@@ -1,1 +1,188 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The Universe | Everything Astronomy</title>
 
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    html, body {
+      scroll-behavior: smooth;
+      font-family: 'Orbitron', sans-serif;
+      background: black;
+      color: white;
+      overflow-x: hidden;
+    }
+
+    /* background particles */
+    .stars {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      overflow: hidden;
+    }
+    .star {
+      position: absolute;
+      width: 2px;
+      height: 2px;
+      background: white;
+      border-radius: 50%;
+      animation: drift 25s linear infinite;
+      opacity: 0.6;
+    }
+    @keyframes drift {
+      0% { transform: translateY(0px) translateX(0px); }
+      100% { transform: translateY(-1000px) translateX(400px); }
+    }
+
+    /* navbar */
+    nav {
+      position: fixed;
+      top: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 20px;
+      z-index: 10;
+      background: rgba(255, 255, 255, 0.05);
+      padding: 10px 20px;
+      border-radius: 30px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(6px);
+    }
+    nav a {
+      color: #00ffff;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+    nav a:hover {
+      color: white;
+      text-shadow: 0 0 10px #00ffff;
+    }
+
+    section {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 50px;
+      text-align: center;
+      background: radial-gradient(ellipse at center, rgba(0,0,0,0.9) 0%, black 100%);
+      transition: background 2s ease;
+    }
+
+    section h1 {
+      font-size: 3rem;
+      color: #00ffff;
+      text-shadow: 0 0 25px #00ffff;
+      margin-bottom: 20px;
+    }
+
+    section p {
+      max-width: 800px;
+      line-height: 1.6;
+      font-size: 1.2rem;
+      color: #d0d0d0;
+    }
+
+    section img {
+      width: 400px;
+      border-radius: 20px;
+      margin-top: 30px;
+      box-shadow: 0 0 40px #00ffff;
+      transition: transform 2s ease;
+    }
+
+    section:hover img {
+      transform: scale(1.05);
+    }
+
+    /* back home button */
+    .back-home {
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(255, 255, 255, 0.4);
+      color: white;
+      padding: 10px 20px;
+      border-radius: 20px;
+      font-family: 'Orbitron', sans-serif;
+      text-decoration: none;
+      backdrop-filter: blur(10px);
+      transition: all 0.3s ease;
+      z-index: 10;
+    }
+
+    .back-home:hover {
+      background-color: rgba(255, 255, 255, 0.3);
+      transform: translateX(-50%) scale(1.05);
+    }
+  </style>
+</head>
+
+<body>
+  <div class="stars" id="stars"></div>
+
+  <nav>
+    <a href="#bigbang">Big Bang</a>
+    <a href="#cmb">CMB</a>
+    <a href="#galaxies">Galaxies</a>
+    <a href="#solarsystem">Solar System</a>
+    <a href="#future">Future</a>
+  </nav>
+
+  <section id="bigbang">
+    <h1>The Big Bang</h1>
+    <p>The universe began as an infinitely dense singularity roughly 13.8 billion years ago, expanding rapidly in a flash of unimaginable energy and light.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Big_Bang.jpg" alt="Big Bang">
+  </section>
+
+  <section id="cmb">
+    <h1>Cosmic Microwave Background</h1>
+    <p>As the universe cooled, light finally broke free — forming the cosmic microwave background, a faint glow still visible today.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/9/99/CMB_Temperature_Map.jpg" alt="CMB">
+  </section>
+
+  <section id="galaxies">
+    <h1>Galaxies Form</h1>
+    <p>Gravity sculpted matter into galaxies and stars — vast cosmic cities of light emerging from dark matter scaffolds.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a8/ESO_-_Milky_Way.jpg" alt="Galaxy">
+  </section>
+
+  <section id="solarsystem">
+    <h1>The Solar System</h1>
+    <p>Within one such galaxy, the Milky Way, our Sun and planets formed 4.6 billion years ago from the remnants of earlier stars.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Solar_sys8.jpg" alt="Solar System">
+  </section>
+
+  <section id="future">
+    <h1>The Future of the Universe</h1>
+    <p>Billions of years ahead, galaxies may drift apart as dark energy accelerates expansion — the universe fading into a cold, silent dark.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/9/94/Dark_energy_repulsive_force_diagram.svg" alt="Future Universe">
+  </section>
+
+  <a href="index.html" class="back-home">← Back to Home</a>
+
+  <script>
+    const starsContainer = document.getElementById("stars");
+    for (let i = 0; i < 150; i++) {
+      const star = document.createElement("div");
+      star.classList.add("star");
+      star.style.top = Math.random() * 100 + "%";
+      star.style.left = Math.random() * 100 + "%";
+      star.style.animationDuration = 10 + Math.random() * 25 + "s";
+      starsContainer.appendChild(star);
+    }
+  </script>
+</body>
+</html>
