this week creation

--- a/this-week.html
+++ b/this-week.html
@@ -1,1 +1,142 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>This Week in Space | Everything Astronomy</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      background: #000011;
+      color: #f0f0f0;
+      font-family: 'Orbitron', sans-serif;
+      line-height: 1.6;
+    }
+    header {
+      text-align: center;
+      padding: 60px 20px;
+      background: url('https://upload.wikimedia.org/wikipedia/commons/3/3e/Fireworks_on_the_Moon.jpg') no-repeat center/cover;
+      background-blend-mode: overlay;
+      background-color: rgba(0,0,17,0.75);
+      color: #00fff2;
+      text-shadow: 0 0 20px #00fff2;
+    }
+    header h1 {
+      font-size: 3rem;
+      margin-bottom: 10px;
+    }
+    header p {
+      font-size: 1.2rem;
+      color: #a0e6e0;
+    }
+    .container {
+      max-width: 1000px;
+      margin: auto;
+      padding: 20px;
+    }
+    .news-card {
+      background: rgba(255,255,255,0.04);
+      border: 1px solid #00fff2;
+      border-radius: 12px;
+      padding: 20px;
+      margin-bottom: 20px;
+      transition: transform 0.3s ease, background 0.3s ease;
+    }
+    .news-card:hover {
+      background: rgba(0,255,242,0.1);
+      transform: scale(1.02);
+    }
+    .news-card h2 {
+      margin: 0 0 10px;
+      color: #00fff2;
+    }
+    .news-card p {
+      margin: 0 0 10px;
+      color: #d0d0d0;
+    }
+    .news-card a {
+      color: #a0fff2;
+      text-decoration: none;
+    }
+    .skywatch {
+      margin-top: 40px;
+      padding: 20px;
+      background: rgba(17,0,34,0.9);
+      border-radius: 12px;
+      border: 1px solid #00fff2;
+    }
+    .skywatch h2 {
+      color: #00fff2;
+      margin-bottom: 10px;
+    }
+    .skywatch ul {
+      list-style: none;
+      padding: 0;
+    }
+    .skywatch li {
+      padding: 8px 0;
+      color: #d0d0d0;
+    }
+    .back-home {
+      display: block;
+      width: fit-content;
+      margin: 40px auto;
+      padding: 12px 24px;
+      text-decoration: none;
+      color: #fff;
+      background-color: rgba(255,255,255,0.06);
+      border: 1px solid rgba(255,255,255,0.2);
+      border-radius: 20px;
+      text-align: center;
+      font-family: 'Orbitron', sans-serif;
+      transition: background 0.3s ease;
+    }
+    .back-home:hover {
+      background-color: rgba(255,255,255,0.14);
+    }
+  </style>
+</head>
+
+<body>
+  <header>
+    <h1>This Week in Space</h1>
+    <p>Latest discoveries, missions & what to watch in the sky</p>
+  </header>
+
+  <div class="container">
+    <!-- News Items -->
+    <div class="news-card">
+      <h2>Scientists solve the mystery of ‘impossible’ black-hole merger</h2>
+      <p>Researchers observed two black holes merging that shouldn't be able to according to current theory—suggesting new physics may be hiding in plain sight.</p>
+      <a href="https://www.space.com/scientists-solve-impossible-black-hole-merger" target="_blank">Read more →</a>
+    </div>
+
+    <div class="news-card">
+      <h2>Severe geomagnetic storm sparks auroras across North America & Europe</h2>
+      <p>A strong solar event triggered vivid northern lights far south of usual latitudes and delayed a major rocket launch.</p>
+      <a href="https://www.space.com/auroras‐geomagnetic‐storm" target="_blank">Read more →</a>
+    </div>
+
+    <div class="news-card">
+      <h2>ESA’s Euclid telescope releases first data on galaxy evolution</h2>
+      <p>Data from the Euclid mission reveal how galaxies grow and merge across cosmic time.</p>
+      <a href="https://www.universetoday.com/euclid‐first‐data" target="_blank">Read more →</a>
+    </div>
+
+    <!-- Sky Watch Section -->
+    <div class="skywatch">
+      <h2>Sky Watch Highlights</h2>
+      <ul>
+        <li>🪐 Saturn & Jupiter appear very close in the evening sky — great for naked‐eye observation.</li>
+        <li>🌠 Minor meteor shower appears on the horizon after midnight — look north‐east.</li>
+        <li>🌙 The first quarter Moon rises late evening — excellent for lunar craters with binoculars.</li>
+      </ul>
+    </div>
+
+    <a href="index.html" class="back-home">← Back to Home</a>
+  </div>
+
+</body>
+</html>
 
