Update images in universe.html

--- a/universe.html
+++ b/universe.html
@@ -20,12 +20,26 @@
       overflow-x: hidden;
     }
 
+ .nebula {
+    position: fixed;
+    inset: 0;
+    pointer-events: none;
+    z-index: 2;
+    mix-blend-mode: screen;
+    background:
+      radial-gradient(40% 30% at 10% 20%, rgba(12,8,40,0.85), transparent 15%),
+      radial-gradient(50% 40% at 85% 70%, rgba(8,12,30,0.85), transparent 14%),
+      radial-gradient(40% 40% at 20% 75%, rgba(100,40,255,0.06), transparent 12%),
+      radial-gradient(50% 40% at 75% 15%, rgba(0,220,255,0.05), transparent 12%);
+    filter: blur(30px) saturate(120%);
+    opacity: 0.95;
+  }
+    
     /* background particles */
     .stars {
       position: fixed;
       width: 100%;
       height: 100%;
-      z-index: -1;
       overflow: hidden;
     }
     .star {
@@ -144,31 +158,31 @@
   <section id="bigbang">
     <h1>The Big Bang</h1>
     <p>The universe began as an infinitely dense singularity roughly 13.8 billion years ago, expanding rapidly in a flash of unimaginable energy and light.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Big_Bang.jpg" alt="Big Bang">
+    <img src="358626f5-a5e9-4da7-87af-8bafcf54a0c9.webp" alt="Big Bang">
   </section>
 
   <section id="cmb">
     <h1>Cosmic Microwave Background</h1>
     <p>As the universe cooled, light finally broke free — forming the cosmic microwave background, a faint glow still visible today.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/9/99/CMB_Temperature_Map.jpg" alt="CMB">
+    <img src="OIP.webp" alt="CMB">
   </section>
 
   <section id="galaxies">
     <h1>Galaxies Form</h1>
     <p>Gravity sculpted matter into galaxies and stars — vast cosmic cities of light emerging from dark matter scaffolds.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a8/ESO_-_Milky_Way.jpg" alt="Galaxy">
+    <img src="Whirlpool-Galaxy-NGC-5195-Sc.webp" alt="Galaxy">
   </section>
 
   <section id="solarsystem">
     <h1>The Solar System</h1>
     <p>Within one such galaxy, the Milky Way, our Sun and planets formed 4.6 billion years ago from the remnants of earlier stars.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Solar_sys8.jpg" alt="Solar System">
+    <img src="edu-solar-system-large.webp" alt="Solar System">
   </section>
 
   <section id="future">
     <h1>The Future of the Universe</h1>
     <p>Billions of years ahead, galaxies may drift apart as dark energy accelerates expansion — the universe fading into a cold, silent dark.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/9/94/Dark_energy_repulsive_force_diagram.svg" alt="Future Universe">
+    <img src="zVuYCPfCYJ54gV2VaiXAGm- 1200-8-.jpg" alt="Future Universe">
   </section>
 
   <a href="index.html" class="back-home">← Back to Home</a>
