--- a/universe.html
+++ b/universe.html
@@ -182,7 +182,7 @@
   <section id="future">
     <h1>The Future of the Universe</h1>
     <p>Billions of years ahead, galaxies may drift apart as dark energy accelerates expansion — the universe fading into a cold, silent dark.</p>
-    <img src="zVuYCPfCYJ54gV2VaiXAGm- 1200-8-.jpg" alt="Future Universe">
+    <img src="zVuYCPfCYJ54gV2VaiXAGm- 1200-80.jpg" alt="Future Universe">
   </section>
 
   <a href="index.html" class="back-home">← Back to Home</a>
