Update Fun Zone link to Underworks page

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <a href="stellar-evolution.html">Stellar Evolution</a>
     <a href="universe.html">Universe</a>
     <a href="this-week.html">This Week in Space</a>
-    <a href="fun-zone.html">Fun Zone</a>
+    <a href="underworks.html">Fun Zone</a>
   </nav>
 
   <script>
